--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "openai": "^4.73.1",
+    "pdfkit": "^0.15.1",
     "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
+    "@types/pdfkit": "^0.13.6"
   }
 }
